# routes/authRoutes.js
@@ -5,6 +5,6 @@ import { authorize, protect } from '../middlewares/authMiddleware.js';
 const router = express.Router();
 
 router.post('/login', login);
-router.get('/',protect,authorize('superadmin','manager'),getUserInfo)
+router.get('/',protect,getUserInfo)
 
 export default router;
