# routes/teamRoutes.js
@@ -11,6 +11,8 @@ import {
   createTeam,
   verifyPayment,
   getAllTeams,
+  deleteTeam,
+  updateTeam,
 } from "../controllers/teamController.js";
 import { protect, authorize } from "../middlewares/authMiddleware.js";
 import upload from "../middlewares/multerMiddleWare.js";
@@ -20,49 +22,64 @@ const router = express.Router();
 router.post(
   "/upload-jerseys",
   protect,
-  authorize("teamManager", "superadmin"),
-  upload.fields(
-    [
-      { name: "home", maxCount: 1 },
-      { name: "away", maxCount: 1 },
-      { name: "third", maxCount: 1 },
-    ]),
+  authorize("manager", "superadmin"),
+  upload.fields([
+    { name: "home", maxCount: 1 },
+    { name: "away", maxCount: 1 },
+    { name: "third", maxCount: 1 },
+  ]),
   uploadJerseys
 );
-// router.post("/add-player", protect, authorize("teamManager"), addPlayer);
 router.put(
   "/select-jersey-number",
   protect,
-  authorize("teamManager","superadmin"),
+  authorize("manager", "superadmin"),
   selectJerseyNumber
 );
 router.post(
   "/request-transfer",
   protect,
-  authorize("teamManager","superadmin"),
+  authorize("manager", "superadmin"),
   requestPlayerTransfer
 );
-router.post("/add-official", protect, authorize("teamManager","superadmin"), addOfficial);
-router.post("/add-logo", protect, authorize("teamManager","superadmin"),upload.single("logo"), addLogo);
+router.post(
+  "/add-official",
+  protect,
+  authorize("manager", "superadmin"),
+  addOfficial
+);
+router.post(
+  "/add-logo",
+  protect,
+  authorize("manager", "superadmin"),
+  upload.single("logo"),
+  addLogo
+);
 router.post(
   "/select-squad",
   protect,
-  authorize("teamManager","superadmin"), 
+  authorize("manager", "superadmin"),
   selectSquadForTournament
 );
-router.post("/new", protect, authorize("superadmin"), upload.fields(
-  [
+router.post(
+  "/new",
+  protect,
+  authorize("superadmin"),
+  upload.fields([
     { name: "home", maxCount: 1 },
     { name: "away", maxCount: 1 },
     { name: "third", maxCount: 1 },
-  ]), createTeam);
+  ]),
+  createTeam
+);
 router.put("/verify-payment", protect, authorize("superadmin"), verifyPayment);
 router.get("/", getAllTeams);
 router.get(
   "/:id",
   protect,
-  // authorize("teamManager", "superAdmin"),
   getTeamDetails
 );
 
+router.delete("/:id", protect, authorize("superadmin", "manager"), deleteTeam);
+router.put("/:id",protect,authorize("superadmin"),updateTeam)
 export default router;
